# OPTIPILOT-AI

./: .gitattributes  .gitignore  .golangci.yml  .ko.yaml  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hub  LICENSE  Makefile  PROGRESS.md  PROJECT  README.md  go.mod  go.sum  local-values.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yaml  go.yml  release.yaml
cmd/manager/: main.go
config/ml/: deployment.yaml  service.yaml
docs/: api-reference.md  architecture.md  cel-reference.md  configuration.md  getting-started.md  installation.md  troubleshooting.md
docs/crds/: application-tuning.md  optimization-policy.md  service-objective.md  tenant-profile.md
docs/guides/: custom-policy.md  first-slo.md  migration-cloudpilot.md  multi-cluster.md  what-if.md
examples/: boutique-slos.yaml  optimization-policy.yaml  service-objective.yaml  tenant-profile-codepro.yaml  tenant-profile.yaml
hack/: boilerplate.go.txt  boutique-heavy-load.ps1  codepro-app.yaml  codepro-slos.yaml  demo.ps1  e2e-setup.sh  quickstart.sh  verify-proactive-scaling.ps1
helm/optipilot/: Chart.yaml  values.yaml
internal/actuator/: app_tuner.go  app_tuner_test.go  canary.go  canary_test.go  doc.go  (+9 more)
ml/: Dockerfile  pyproject.toml  requirements.txt
ml/app/: __init__.py  accuracy.py  forecaster.py  main.py  schemas.py  spot_predictor.py
ml/app/models/: .gitkeep
ml/tests/: __init__.py  test_accuracy.py  test_api.py  test_forecaster.py  test_schemas.py  test_sinusoidal_forecast.py  test_spot_predictor.py
(+174 files in other folders)
